apps/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: dwk-project-volume
          emptyDir: {}
      containers:
        - name: todo-app
          image: mtuomiko/todo-app:0.0.10
          volumeMounts:
            - mountPath: /app/shared
              name: dwk-project-volume
