apps/todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      nodePort: 32130
      protocol: TCP
      port: 5000
      targetPort: 5678
